--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,8 +17,9 @@ jobs:
 
     steps:
       - name: Set Actions Allow Unsecure Commands
-          run: |
-            echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
+        id: step_one
+        run: |
+          echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV            
 
       - uses: actions/checkout@v2
       - run: npm install
