--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,10 +21,10 @@ jobs:
       - run: npm run build
 
       - name: Set Actions Allow Unsecure Commands
-        id: step_one
+        id: step_two
         run: |
-          echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" 
-          
+          echo 'ACTIONS_ALLOW_UNSECURE_COMMANDS=true' >> $GITHUB_ENV
+
       - uses: chrislennon/action-aws-cli@v1.1
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
